fifht commit mise à jour avant derniere version

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,8 +23,7 @@ security:
                 default_target_path: /admin/dashboard 
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: app_home
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -40,6 +39,18 @@ security:
 
 when@test:
     security:
+    firewalls:
+        main:
+            lazy: true
+            provider: app_user_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                default_target_path: backoffice_dashboard   # 👈 ici tu forces la redirection
+            logout:
+                path: app_logout
+                target: app_login
+
         password_hashers:
             # By default, password hashers are resource intensive and take time. This is
             # important to generate secure password hashes. In tests however, secure hashes
